# context

./: AGENTS.md  README.md  justfile
.github/workflows/: ci.yml  release.yml
app/: Package.swift
app/Sources/Context/: AppState.swift  ChatTab.swift  ChatTabBar.swift  ChatView.swift  ComposerView.swift  ContextApp.swift  MessageBubble.swift  MessageSearch.swift  RootView.swift  SettingsView.swift  SidebarView.swift
app/Tests/ContextTests/: ChatTabTests.swift  MessageSearchTests.swift
core/: Cargo.toml
core/examples/: smoke.rs
core/src/: db.rs  lib.rs
scripts/: install.sh
